<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".LoginActivity">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/login_icon_iv"
        android:layout_width="67dp"
        android:layout_height="64dp"
        android:layout_marginTop="66dp"
        android:src="@drawable/white_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/login_input_rl"
        android:layout_width="280dp"
        android:layout_height="218dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/shape_white_rl1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_icon_iv">

        <RelativeLayout
            android:id="@+id/login_input_email_rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/login_input_email_iv"
                style="@style/IV24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="14dp"
                android:src="@drawable/login_icon_mail_n" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/login_input_email_et"
                style="@style/TV14LightBlack"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_toEndOf="@id/login_input_email_iv"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/login_email"
                android:maxLines="1"
                android:singleLine="true" />
        </RelativeLayout>

        <View
            android:id="@+id/login_input_email_line"
            android:layout_width="220dp"
            android:layout_height="1dp"
            android:layout_below="@id/login_input_email_rl"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@color/colorAppGrey" />

        <RelativeLayout
            android:id="@+id/login_input_pwd_rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_input_email_line"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="30dp">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/login_input_pwd_iv"
                style="@style/IV24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="18dp"
                android:src="@drawable/login_icon_lock_n" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/login_input_pwd_et"
                style="@style/TV14LightBlack"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_toEndOf="@id/login_input_pwd_iv"
                android:background="@null"
                android:gravity="center_vertical"
                android:inputType="textPassword"
                android:hint="@string/login_pwd_et"
                android:imeOptions="actionGo"
                android:maxLines="1"
                android:singleLine="true" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/login_input_show_iv"
                style="@style/IV16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/login_icon_hide_password_n" />
        </RelativeLayout>

        <View
            android:id="@+id/login_input_pwd_line"
            android:layout_width="220dp"
            android:layout_height="1dp"
            android:layout_below="@id/login_input_pwd_rl"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@color/colorAppGrey" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/login_input_login_bt"
            style="@style/BTBule"
            android:layout_width="230dp"
            android:layout_height="36dp"
            android:layout_below="@id/login_input_pwd_line"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="36dp"
            android:text="@string/login_login_bt" />
    </RelativeLayout>

    <View
        android:layout_width="260dp"
        android:layout_height="5dp"
        android:background="@drawable/shape_white_rl3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_input_rl" />

    <View
        android:id="@+id/login_view_line"
        android:layout_width="240dp"
        android:layout_height="10dp"
        android:background="@drawable/shape_white_rl2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_input_rl" />

    <RelativeLayout
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_view_line">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/login_forgot_pwd"
            style="@style/TV10White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/login_forgot_pwd" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/login_registere_now"
            style="@style/TV12White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/login_fast_registered"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatTextView
            style="@style/TV10White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/login_registere_now"
            android:text="@string/login_no_account" />

    </RelativeLayout>


    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/login_wechat"
        style="@style/IV24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:src="@drawable/login_icon_weixin_white_n"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/login_wechat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:id="@+id/view1"
            android:layout_width="54dp"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/login_other_login_methods"
            android:background="@color/colorAppWhite" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/login_other_login_methods"
            style="@style/TV12White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="10dp"
            android:text="@string/login_other_login_methods" />

        <View
            android:id="@+id/view2"
            android:layout_width="54dp"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/login_other_login_methods"
            android:background="@color/colorAppWhite" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>